style.css
@font-face {
  font-family: 'Open Sans';
  src: local("Open Sans");
  src: url('/fonts/opensans-regular-webfont.eot');
  src: url('/fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
       url('/fonts/opensans-regular-webfont.woff2') format('woff2'),
       url('/fonts/opensans-regular-webfont.woff') format('woff'),
       url('/fonts/opensans-regular-webfont.ttf') format('truetype'),
       url('/fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

html {
  max-width: 800px;
  margin: auto;
}

body {
  background-color: #111318;
  color: #DDDDDD;
  font-family: 'Open Sans', Arial, sans-serif;
}

a:link {
  color: #F47D7B;
}

a:visited {
  color: #F47D7B;
}

a:hover {
  color: #86A3C1;
}

a:active {
  color: #86A3C1;
}

img {
  border: 2px solid #F47D7B;
  background-color: #111318;
  display: inline-block;
  overflow: hidden;
  vertical-align:text-bottom
}

ul {
    list-style: none;
    padding: 0;
}

h1 {
  margin-top: 0;
}

a:focus {
  outline: 2px solid #86A3C1;
  outline-offset: 2px;
}

